# claude-chess

./: .gitignore  Cargo.toml  README.md  install.sh  package.json
.claude-plugin/: marketplace.json  plugin.json
agents/: chess-ai.md
assets/skill/: SKILL.md
assets/skill/agents/: chess-ai.md
assets/skill/tools/: board.html  chess-api.cjs  server.cjs
assets/skill/tools/web/: app.js  board.css  engine.js
skills/chess/: SKILL.md
skills/chess/tools/: board.html  chess-api.cjs  server.cjs
skills/chess/tools/web/: api.js  app.js  board.css  package.json  theme.css  view.js
src/: install.rs  main.rs
